--- a/machine.html
+++ b/machine.html
@@ -47,7 +47,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1795254'>Job Application for Nubank - Machine Learning Engineer at Nubank</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nubank/jobs/1795254'>Job Application for Nubank - Machine Learning Engineer at Nubank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... as the most innovative company in Latin America and ranked no. 36 on Fast 
 Company' 50 Most Innovative Companies ranking. Our Data Scientist Chapter?...</p>
@@ -142,7 +142,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318057002'>Job Application for Senior Backend Engineers Machine Learning  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318057002'>Job Application for Senior Backend Engineers Machine Learning  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -164,7 +164,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mtailor.workable.com/j/86AB8197A4'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -181,7 +181,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p>4 days ago ... Advertima AG has a job opening for Computer Vision & Machine Learning 
 Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/aifoundation/3eb05c48-efc6-4226-ba37-caf2214ab815'>AI Foundation - Machine Learning Infrastructure Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/aifoundation/3eb05c48-efc6-4226-ba37-caf2214ab815'>AI Foundation - Machine Learning Infrastructure Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -196,13 +196,13 @@ edge?...</p>
 <p>4 days ago ... You'll join our Applied Machine Learning Team and help our team drive customer 
 acquisition and revenue growth in 2019. You value collaboration and want to?...</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/DAA2DC9722'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/DAA2DC9722'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... You will participate in partnerships with data science leaders, like our 
 partnership with NVIDIA to deliver Deep Learning Institute (DLI) training to the 
 federal?...</p>
 <hr/>
-<h5><a href='https://mercari.workable.com/jobs/1071389'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/jobs/1071389'>Software Engineer, Machine Learning [New Graduate Position]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2019?7?10? ... Experience using TensorFlow, PyTorch, Chainer, Caffe, or other deep learning 
 frameworks; Experience with data analysis and development using the cloud?...</p>
@@ -226,12 +226,12 @@ a career change to somewhere where you can really make a difference,?...</p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Business Analyst-Finance San Jose (CA); Business Development Director San 
 Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dcard/jobs/874289'>Job Application for Junior Data Scientist / Machine Learning Engineer at Dcard</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dcard/jobs/874289'>Job Application for Junior Data Scientist / Machine Learning Engineer at Dcard</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -337,7 +337,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p>Jul 10, 2019 ... BSc, MSc or PhD in Computer Science, Statistics, or comparable knowledge; 
 Prior strong expertise and experience in machine learning and data science?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/robustai/jobs/4347975002'>Job Application for Machine Learning Engineer at Robust.AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robustai/jobs/4347975002'>Job Application for Machine Learning Engineer at Robust.AI</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -371,7 +371,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p>6 days ago ... Machine Learning Engineer. San Francisco. Engineering. Full-time. Apply for this 
 job. Dor is a retail analytics startup that uses a first-of-its-kind hardware and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -387,7 +387,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light">Mc Lean, VA Mc Lean, VA Mc Lean, VA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://llamasoft.applytojob.com/apply/N5i4zgsKml/Sr-Machine-Learning-Scientist'>Sr. Machine Learning Scientist - LLamasoft - Career Page</a></h5> 
+<h5><a href='http://llamasoft.applytojob.com/apply/N5i4zgsKml/Sr-Machine-Learning-Scientist'>Sr. Machine Learning Scientist - LLamasoft - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -417,7 +417,7 @@ Position] at Mercari, inc.</p>
 <p>Jul 7, 2019 ... You're a research scientist who has published in top tier conferences and are 
 passionate about having a positive impact on the world. You are enthusiastic?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/adroll/jobs/1775755'>Job Application for Sr. Machine Learning Infrastructure Engineer at AdRoll Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/adroll/jobs/1775755'>Job Application for Sr. Machine Learning Infrastructure Engineer at AdRoll Group</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
